[package]
name = "grande-sonnerie"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
confy = "0.5.1"
rusty_audio = "1.4.1"
serde = { version = "1.0.163", features = ["derive"] }
time = "0.3.21"
toml = "0.7.3"

