[package]
name = "grande-sonnerie"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
confy = "0.5.1"
fs_extra = "1.3.0"

[dependencies]
confy = "0.5.1"
cpal = "0.15.2"
serde = { version = "1.0.163", features = ["derive"] }
toml = "0.7.3"
wav = "1.0.0"

